Custom logo, added to the login view. Change offline message

--- a/src/main/resources/META-INF/resources/offline.html
+++ b/src/main/resources/META-INF/resources/offline.html
@@ -27,9 +27,9 @@
 <body>
 
 <div class="content">
-    <img src="./images/offline.png" alt="The app is offline" class="offline-image"/>
-    <h1>Oh deer, you're offline</h1>
-    <p>Your internet connection is offline. Get back online to continue using Skillia.</p>
+    <img src="./images/offline.png" alt="Internet connection or app offline" class="offline-image"/>
+    <h1>Oh deer, we're offline</h1>
+    <p>Internet connection or app offline.</p>
 </div>
 <script>
     window.addEventListener('online', () => window.location.reload());
